--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production node server/index.js",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
+    "lint": "eslint --ext .ts,.js,.vue --ignore-path .gitignore .",
+    "lintfix": "eslint --fix --ext .ts,.js,.vue --ignore-path .gitignore ."
   },
   "dependencies": {
     "nuxt": "^2.0.0",
@@ -21,17 +22,20 @@
     "@nuxtjs/dotenv": "^1.4.0"
   },
   "devDependencies": {
-    "nodemon": "^1.18.9",
     "@nuxt/typescript-build": "^0.6.0",
     "@nuxtjs/eslint-config-typescript": "^1.0.0",
     "@nuxtjs/eslint-module": "^1.0.0",
+    "@nuxtjs/stylelint-module": "^3.1.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.1.0",
-    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.1.2",
+    "nodemon": "^1.18.9",
+    "nuxt-buefy": "^0.3.31",
     "prettier": "^1.19.1",
-    "@nuxtjs/stylelint-module": "^3.1.0",
+    "socket.io": "^2.3.0",
+    "socket.io-client": "^2.3.0",
     "stylelint": "^10.1.0"
   }
 }
